perf(qcommon): switch to using isBlank in String empty check rather than trim().isEmpty()